--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/Shared/_Layout.cshtml
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AspectCore.Extensions.AspNetCore.Sample</title>
+    <title>@ViewData["Title"] - AspNetCore.Sample</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AspectCore.Extensions.AspNetCore.Sample</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AspNetCore.Sample</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Book" asp-action="Create">Create Book</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -42,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - AspectCore.Extensions.AspNetCore.Sample</p>
+            <p>&copy; 2017 - AspNetCore.Sample</p>
         </footer>
     </div>
 
