--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/Shared/_LoginPartial.cshtml
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using AspectCore.Extensions.AspNetCore.Sample.Models
+@using AspNetCore.Sample.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
