--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/_ViewImports.cshtml
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using AspectCore.Extensions.AspNetCore.Sample
-@using AspectCore.Extensions.AspNetCore.Sample.Models
-@using AspectCore.Extensions.AspNetCore.Sample.Models.AccountViewModels
-@using AspectCore.Extensions.AspNetCore.Sample.Models.ManageViewModels
+@using AspNetCore.Sample
+@using AspNetCore.Sample.Models
+@using AspNetCore.Sample.Models.AccountViewModels
+@using AspNetCore.Sample.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
